syntax = "proto3";

package suggestions;

service SuggestionsService {
    rpc SuggestBooks(SuggestBooksRequest) returns (SuggestionsResponse);
}

message VectorClock {
  map<string, int32> clock = 1;
}

message SuggestBooksRequest {
    repeated int64 bookID = 1;
    VectorClock vector_clock = 2;
}

message BookSuggestion {
    int64 bookID = 1;
    string title = 2;
    string author = 3;
}

message SuggestionsResponse {
    repeated BookSuggestion suggestions = 1;
    VectorClock vector_clock = 2;
}

